--- a/Fluorite.Dynamic/Fluorite.Dynamic.csproj
+++ b/Fluorite.Dynamic/Fluorite.Dynamic.csproj
@@ -1,15 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;net48;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
-  
-    <RootNamespace>Fluorite</RootNamespace>
+    <TargetFrameworks>net45;net462;net48;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="All" />
+    <PackageReference Include="RelaxVersioner" Version="2.3.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
@@ -20,6 +17,10 @@
     <ProjectReference Include="..\Fluorite.Core\Fluorite.Core.csproj" />
     <ProjectReference Include="..\Fluorite.Serializer\Fluorite.Serializer.csproj" />
     <ProjectReference Include="..\Fluorite.Transport\Fluorite.Transport.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Images\Fluorite.100.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
