--- a/Fluorite.Transport/Fluorite.Transport.csproj
+++ b/Fluorite.Transport/Fluorite.Transport.csproj
@@ -1,20 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net45;net48;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
-    <LangVersion>latest</LangVersion>
-    <Nullable>enable</Nullable>
-  
-    <RootNamespace>Fluorite</RootNamespace>
+    <TargetFrameworks>net45;net462;net48;netcoreapp2.0;netcoreapp2.1;netcoreapp3.0;netcoreapp3.1;netstandard2.0;netstandard2.1;net5.0</TargetFrameworks>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="All" />
     <PackageReference Include="System.Threading.Tasks.Extensions" Version="4.5.4" />
+    <PackageReference Include="RelaxVersioner" Version="2.3.2" PrivateAssets="all" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Fluorite.Core\Fluorite.Core.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\Images\Fluorite.100.png" Pack="true" PackagePath="" />
   </ItemGroup>
 
 </Project>
