Fixed referring option for Fluorite.Build.

--- a/Fluorite/Fluorite.nuspec
+++ b/Fluorite/Fluorite.nuspec
@@ -16,70 +16,70 @@
     <repository type="git" url="https://github.com/kekyo/Fluorite.git" branch="$RepositoryBranch$" commit="$RepositoryCommit$" />
     <dependencies>
       <group targetFramework=".NETFramework4.5">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.6.2">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETFramework4.8">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETCoreApp2.0">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETCoreApp2.1">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETCoreApp3.0">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETCoreApp3.1">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETStandard2.0">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework=".NETStandard2.1">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="System.Threading.Tasks.Extensions" version="4.5.4" exclude="Build,Analyzers" />
       </group>
       <group targetFramework="net5.0">
-        <dependency id="Fluorite.Build" version="$PackageVersion$" exclude="All" />
+        <dependency id="Fluorite.Build" version="$PackageVersion$" />
         <dependency id="Fluorite.Core" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Serializer" version="$PackageVersion$" exclude="Build,Analyzers" />
         <dependency id="Fluorite.Transport" version="$PackageVersion$" exclude="Build,Analyzers" />
