--- a/Fluorite.Tests/Fluorite.Tests.csproj
+++ b/Fluorite.Tests/Fluorite.Tests.csproj
@@ -6,6 +6,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;net48;netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <DefineConstants Condition="'$(CITest)' != ''">$(DefineConstants);CITest</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
