--- a/Fluorite.Dynamic.Tests/Fluorite.Dynamic.Tests.csproj
+++ b/Fluorite.Dynamic.Tests/Fluorite.Dynamic.Tests.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFrameworks>net45;net48;netcoreapp2.1;netcoreapp3.1;net5.0</TargetFrameworks>
+    <DefineConstants Condition="'$(CITest)' != ''">$(DefineConstants);CITest</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
